[project]
name = "traffic-signal-control"
version = "1.0.0"
description = "Traffic Signal Control OpenEnv Environment"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "pydantic==2.9.2",
    "requests==2.32.3",
    "openai>=1.52.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:BuildBackend"

[tool.setuptools.packages.find]
where = ["."]
